Bugfix in css, override backend css to enable scrollbars. Added clarifying comment to _config.php

--- a/css/ss_developer_dashboard_log.css
+++ b/css/ss_developer_dashboard_log.css
@@ -1,3 +1,6 @@
+body.cms{
+	overflow: visible !important;
+}
 div#SSDD-toggle-update, div#SSDD-log-area {
 	margin: 1em;
 	padding: 1em;
